--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ config/local-dev.yml
 frontend/ts/exported_config.json
 
 verification_key.json
+backend/verification_key.json
 contracts/.privateKeys.json
 contracts/privateKeys.json
 
