Updated mixer contract to transfer the fee to a parameterised relayer; implemented a  mock relay registry; updated backend, frontend, and tests to use the mock relay registry; deployed new contracts

--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -16,10 +16,7 @@ chain:
     MultipleMerkleTree: '0xF12b5dd4EAD5F743C6BaA640B0216200e89B60Da'
     Semaphore: '0x345cA3e014Aaf5dcA488057592ee47305D9B3e10'
     Mixer: '0xf25186B5081Ff5cE73482AD761DB0eB0d25abfBF'
-    #MiMC: "0xEa2F49D59Edaa5cab95AF5DE5C14c6e0a730cEBa"
-    #MultipleMerkleTree: "0xA20Ca36803DaB1d7B97576f0e7A0ABe876953C20"
-    #Semaphore: "0x532E2E4F972F79E086e65a8a7EAe82ac4bFB8eD4"
-    #Mixer: "0x08F3fA6B5256fe583281738eB79A0Cb75C3E7f5B"
+    RelayRegistry: '0x2C2B9C9a4a25e24B174f26114e8926a9f2128FE4'
 
 backend:
   port: 3000
