ERC20 token mixing tests with a mintable token; removed witness test file; updated deploy script; fixed bug in mixer stress test; refactored withdrawals in tests

--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -3,6 +3,10 @@ env: 'local-dev'
 mixAmtEth: "0.1"
 feeAmtEth: "0.001"
 
+testing:
+  mixAmtTokens: 100
+  feeAmtTokens: 1
+
 chain:
   url: "http://localhost:8545"
   chainId: 1234
