--- a/contracts/package.json
+++ b/contracts/package.json
@@ -9,6 +9,8 @@
     "test-debug": "node --inspect-brk ./node_modules/.bin/etherlime test --path=build/__tests__ --skip-compilation --timeout 90000",
     "test-mix": "etherlime test --path=build/__tests__/Mixer.test.js --skip-compilation --timeout 90000",
     "test-mix-debug": "node --inspect-brk ./node_modules/.bin/etherlime test --path=build/__tests__/Mixer.test.js --skip-compilation --timeout 90000",
+    "test-mix-tokens": "etherlime test --path=build/__tests__/TokenMixer.test.js --skip-compilation --timeout 90000",
+    "test-mix-tokens-debug": "node --inspect-brk ./node_modules/.bin/etherlime test --path=build/__tests__/TokenMixer.test.js --skip-compilation --timeout 90000",
     "test-mix-stress": "etherlime test --path=build/__tests__/MixerStress.test.js --skip-compilation --timeout 5000000",
     "test-mix-stress-debug": "node --inspect-brk ./node_modules/.bin/etherlime test --path=build/__tests__/MixerStress.test.js --skip-compilation --timeout 5000000",
     "watch": "tsc --watch",
