--- a/contracts/package.json
+++ b/contracts/package.json
@@ -27,6 +27,7 @@
     "etherlime-lib": "^1.1.0",
     "ethers": "^4.0.32",
     "ganache-cli": "^6.4.4",
+    "ganache-core": "^2.6.1",
     "mixer-utils": "1.0.0",
     "solc": "^0.4.25",
     "truffle-artifactor": "^4.0.10"
