--- a/crypto/package.json
+++ b/crypto/package.json
@@ -15,11 +15,11 @@
   "dependencies": {
     "@types/node": "^12.0.10",
     "await-lock": "^1.1.3",
-    "circomlib": "git+https://github.com/kobigurk/circomlib.git",
+    "circomlib": "0.0.10",
     "ethers": "^4.0.32",
     "module-alias": "^2.2.0",
     "semaphore-merkle-tree": "^1.0.4",
-    "snarkjs": "^0.1.13",
+    "snarkjs": "git+https://github.com/iden3/snarkjs.git#c428706ef69930e378c31199ff8d66ee13fada85",
     "websnark": "git+https://github.com/iden3/websnark.git#3b6cf0c77e48ab0867a2d710c0b35794b16bde7d"
   },
   "devDependencies": {}
