--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:1.17.1-alpine AS mixer-frontend
 
-COPY --from=mixer-base /mixer/frontend/build /static
+COPY --from=mixer-base /mixer/frontend/dist /static
 COPY --from=mixer-base /mixer/frontend/nginx.conf /etc/nginx/nginx.conf
 
 WORKDIR /
