--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "worker_threads": "./externals/worker_threads.js"
     },
     "dependencies": {
+        "surrogeth-client": "^0.2.0",
         "buffer": "^5.2.1",
         "bulma": "^0.7.5",
         "ethers": "^4.0.30",
@@ -43,6 +44,7 @@
         "tslint-microsoft-contrib": "^6.2.0",
         "typescript": "^3.5.2",
         "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.9"
+        "webpack-cli": "^3.3.9",
+        "webpack-dev-server": "^3.8.2"
     }
 }
