--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -83,13 +83,13 @@ http {
            gzip_static on;
        }
 
-       location /api {
-           limit_req zone=mylimit burst=30 nodelay;
-           proxy_set_header Host $host;
-           proxy_set_header X-Real-IP $remote_addr;
-           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-           proxy_pass http://mixer-backend:3000/;
-       }
+       /*location /api {*/
+           /*limit_req zone=mylimit burst=30 nodelay;*/
+           /*proxy_set_header Host $host;*/
+           /*proxy_set_header X-Real-IP $remote_addr;*/
+           /*proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;*/
+           /*proxy_pass http://mixer-backend:3000/;*/
+       /*}*/
    }
 }
 
